--- a/assets/css/general.css
+++ b/assets/css/general.css
@@ -10,11 +10,49 @@ html {
   background-size: cover;
   background-attachment: fixed;
 }
-body, main {
+body,
+main {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 body > * {
   font-family: Open Sans;
+}
+/* Switch */
+.switch {
+  width: 60px;
+  height: 25px;
+  background: #0004;
+  display: inline-block;
+  position: relative;
+  vertical-align: middle;
+  margin: 0 5px;
+}
+.switch input[type="checkbox"] {
+  position: absolute;
+  left: 0;
+  right: 0;
+  width: 100%;
+  bottom: 0;
+  opacity: 0;
+  z-index: 1;
+}
+.switch input[type="checkbox"] + .slider {
+  position: absolute;
+  left: 5px;
+  top: 5px;
+  transition: left 0.1s;
+
+  width: 15px;
+  height: 15px;
+  display: inline-block;
+
+  background: var(--color-2);
+  filter: saturate(0.4) brightness(5);
+  opacity: 0.3;
+}
+.switch input[type="checkbox"]:checked + .slider {
+  left: calc(100% - 20px);
+  background: var(--color-1);
 }
