--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -7,16 +7,17 @@ h3.big {
   font-family: Quicksand;
   display: inline-block;
   border-radius: 0.15em;
+  color: white;
 }
 h1.big {
-  background: #fff2;
+  background: #0002;
   font-size: min(300px, 20vmin);
   padding: calc(1em / 3);
   margin-block-start: 0.3em;
   margin-block-end: 0.3em;
 }
 h3.big {
-  background: #fff3;
+  background: #0003;
   padding: 0.5em;
 }
 button {
@@ -29,7 +30,8 @@ button {
   font-size: 1.1em;
   border: none;
   border-radius: 3px;
-  background: #fff2;
+  background: #0002;
+  color: white;
 }
 /* Background music styling */
 audio {
@@ -57,7 +59,7 @@ audio {
   color: white;
 }
 .audioControlMenu {
-  background: #fff2;
+  background: #0002;
   padding: 25px;
   width: min(700px, 80vw);
   height: min(450px, 80vh);
